// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<button
  className="sc-bdnylx sc-gtssRu fbGLvz jsKurr"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-bdnylx sc-gtssRu iwZKpE jsKurr"
>
  foo
</button>
`;
